<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:gravity="center"
        android:text="@string/sign_in_header"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/ic_back_button"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="72dp"
        android:layout_height="14dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_small_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phone_or_email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone_or_email"
        android:layout_marginTop="41dp"
        android:paddingStart="@dimen/common_edit_text_padding"
        android:paddingEnd="@dimen/common_edit_text_padding"
        android:background="@drawable/edit_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/contract_number_input"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/Password"
        android:paddingStart="@dimen/common_edit_text_padding"
        android:paddingEnd="@dimen/common_edit_text_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_or_email_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_button"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:text="@string/sign_in"
        android:backgroundTint="@color/common_button_color"
        android:layout_marginBottom="60dp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_button" />


</androidx.constraintlayout.widget.ConstraintLayout>