<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="468dp"
        android:layout_marginTop="-61dp"
        android:background="@drawable/ic_group_2812"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="131.68dp"
        android:layout_height="99.49dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/ic_group_2803"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="162.61dp"
        android:layout_height="46.31dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_airwet_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="210dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_label_header"
        android:textColor="#0F9DEE"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_label_body"
        android:textColor="#0F9DEE"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/common_button_color"
        android:text="@string/sign_in_button"

        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/common_button_color"
        android:text="@string/sign_up_button"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>